# aptbot

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
aptbot/: __init__.py  __main__.py  args.py  args_logic.py  bot.py  constants.py  main.py
aptbot/resources/: main.py
examples/: README.md
examples/account1/: message_interpreter.py  scam.py  spam.py
examples/account1/tools/: raid.py
examples/example_1/: main.py
test/ttv_api/: channel.py
ttv_api/: __init__.py  channel.py  emotes.py  stream.py  users.py
