[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aptbot"
version = "0.2.2"
description = "A chatbot for twitch.tv"
readme = "README.md"
authors = [{ name = "Georgios Atheridis", email = "atheridis@tutamail.com" }]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
]
keywords = ["bot", "twitch", "streaming"]
dependencies = ["python-dotenv", "urllib3"]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "pytest", "flake8-black", "pip-tools"]

[project.urls]
Homepage = "https://github.com/atheridis/aptbot"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}

[project.scripts]
aptbot = "aptbot.main:main"
